k8s-manifests/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: backend
    app.kubernetes.io/instance: my-ingress-app
  name: backend
  namespace: my-sre
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - env:
            - name: DATABASE_PATH
              value: /data/portfolio_contacts.db
          image: 'mohd1995/backend-sre:latest'
          name: backend
          ports:
            - containerPort: 5000
          volumeMounts:
            - mountPath: /data/portfolio_contacts.db
              name: sqlite-storage
      volumes:
        - name: sqlite-storage
          persistentVolumeClaim:
            claimName: my-pvc
