k8s-manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: my-sre
spec:
  selector:
    app: backend
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
  type: ClusterIP

---

apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: my-sre
spec:
  selector:
    app: frontend
  ports:
    - port: 8080
      targetPort: 5000
      protocol: TCP
  type: ClusterIP
